# UI_ChausseeNeuve

./: .gitignore  BIBLIOTHEQUE_MIGRATION_FINAL.md  Biblio_to_do.md  CORRECTION_LIGNES_VERTICALES_DATAGRID_REUSSIE.md  CORRECTION_VALEURS_SN_SH.md  DOCUMENTATION_DOMAINE.md  DOCUMENTATION_NOUVEAUX_ONGLETS.md  GESTION_SH_STANDARD_COMME_ALIZE.md  GUIDE_RAPIDE_BIBLIOTHEQUE.md  GUIDE_UTILISATEUR.md  PHASE_1_COMPLETION_SUMMARY.md  PHASE_1_VISUAL_SUMMARY.md  PLAN_DEVELOPPEMENT_SECTIONS_MATERIAUX_MTLH.md  PROLONGATION_LIGNES_VERTICALES_REUSSIE.md  README.md  RELEASE_NOTES_v2.0.md  SECTION_MTLH_AMELIOREE_CONCEPT_REUSSI.md  SECTION_MTLH_SANS_CONTROLES_TEMPERATURE_FREQUENCE_REUSSIE.md  SOLUTION_TRMM_DOCUMENTATION.md  TABLEAU_MODERNE_CLASSIQUE_CONCEPT_REUSSI.md  TABLEAU_MODERNE_FINAL_SUCCES_OPERATIONNEL.md  TESTS_SYNCHRONIZATION_README.md  TRMM_CHANGELOG.md  TRMM_FILES_SUMMARY.md  TRMM_PHASE1_FINAL_SUMMARY.md  TRMM_PRODUCTION_TEST_GUIDE.md  UI_ChausseeNeuve.sln  Validation.md  diagnostic_plantage.bat  launch_wpf_with_logs.ps1  main (1).cpp  run-synchronization-tests.bat  solution_fiable_bibliotheque.bat  test_ameliorations_forme_tableau_moderne.bat  test_concept_tableau_moderne_valide.bat  test_final_correction.bat  test_navigation_valeurs_biblio.bat  test_sh_standard_comme_alize.bat  test_style_alize_clair.bat  test_tableau_moderne_final_operationnel.bat  (+1 more)
ChausseeNeuve.Domain/: ChargeReference.cs  ChausseeNeuve.Domain.csproj  Enums.cs  Layer.cs  PavementStructure.cs  Project.cs  README.md  ValeurAdmissibleCoucheDto.cs
ChausseeNeuve.Domain/Models/: GNTParameters.cs  ValeurAdmissibleCouche.cs
PavementCalculationEngine/: .gitignore  CMakeLists.txt  README.md  build_dll_clean.bat  pymastic_bridge.py  test_input.json
PavementCalculationEngine/build-dll/: .ninja_deps  .ninja_log  build.ninja
PavementCalculationEngine/build-dll/tests/: PavementTests[1]_include.cmake
PavementCalculationEngine/build-pymastic/tests/: PavementTests[1]_include.cmake
PavementCalculationEngine/debug-scripts/: debug_coordinate_system.py  debug_pymastic_iterations.py  debug_pymastic_simple.cpp  debug_pymastic_units.py  debug_units_detailed.py  pymastic_test_input.json  pymastic_wrapper.py  test_cpp_vs_python_debug.py  test_kenpave_validated.py  test_loading_finetune.py  test_pymastic_c_api.c  test_pymastic_reference.py  test_python_bridge.cpp  test_python_reference.py  test_tableau_i1_detailed.py  validate_pymastic_tableaux.py  vcpkg.json
PavementCalculationEngine/include/: Constants.h  Logger.h  MatrixOperations.h  PavementAPI.h  PavementCalculator.h  PavementData.h  PyMasticPythonBridge.h  PyMasticSolver.h  TRMMSolver.h
PavementCalculationEngine/src/: MatrixOperations.cpp  MatrixOperations_Fixed.cpp  PavementAPI.cpp  PavementCalculator.cpp  PavementData.cpp  PyMasticPythonBridge.cpp  PyMasticSolver.cpp  StabilizedCalculator.cpp  StabilizedMatrixOperations.cpp  TRMMSolver.cpp  TransferMatrixMethod.cpp  main.cpp
PavementCalculationEngine/tests/: CMakeLists.txt  CMakeLists_standalone.txt  c_api_test.c  performance_benchmark.c  pymastic_corrected_test.cpp  pymastic_scaling_analysis.cpp  simple_tableaux_test.cpp  test_bessel_validation.cpp  test_corrected_integration.cpp  test_matrix_operations.cpp  test_pavement_calculator.cpp  test_pavement_data.cpp  test_phase2_validation.c  test_pymastic_c_api.c  test_pymastic_cpp_debug.cpp  test_pymastic_diagnostic.cpp  test_pymastic_final.cpp  test_pymastic_minimal.cpp  test_pymastic_port.cpp  test_pymastic_simple.cpp  test_pymastic_tableaux.cpp  test_trmm_solver.cpp  test_trmm_stability.c  test_trmm_test5.c  test_trmm_validation.cpp
PavementCalculationEngine/tests/build-c-test/: PavementTests[1]_include.cmake
TestNativeCalculation/: Program.cs  README.md
UI_ChausseeNeuve/: App.xaml  App.xaml.cs  AppState.cs  DOCUMENTATION_TECHNIQUE_ONGLETS.md  INTEGRATION_COMPLETE.md  README.md  README_NOUVEAUX_ONGLETS.md  UI_ChausseeNeuve.csproj
UI_ChausseeNeuve.Tests/: UI_ChausseeNeuve.Tests.csproj
UI_ChausseeNeuve.Tests/Helpers/: MockAppState.cs  TestDataBuilder.cs  TestDispatcherHelper.cs  ViewModelTestBase.cs
UI_ChausseeNeuve.Tests/Integration/: AutomaticValueCopyIntegrationTests.cs  MaterialNameSynchronizationIntegrationTests.cs  SimpleIntegrationTest.cs
UI_ChausseeNeuve.Tests/Unit/: BeginInvokeRaceConditionTests.cs  StringMatchingTests.cs  ValeursAdmissiblesViewModelTests.cs
UI_ChausseeNeuve/Converters/: BooleanToBackgroundConverter.cs  DecimalDirectConverter.cs  EmptyIfNeutralExpertConverter.cs  EmptyIfZeroExpertConverter.cs  EmptyIfZeroUnlessUserSetMultiConverter.cs  ResultatConverters.cs  SimpleConverters.cs  StructureConverters.cs  WidthToVisibilityConverter.cs
UI_ChausseeNeuve/Reports/: IReportSection.cs  NoteDeCalculGenerator.cs  ReportBuilder.cs  ReportContext.cs
UI_ChausseeNeuve/Resources/: Theme.xaml
UI_ChausseeNeuve/Services/: MaterialDataService.cs  MaterialMappingService.cs  NormativeBitumeModel.cs  ProjectStorage.cs  RecentFiles.cs  RelayCommand.cs  SolicitationCalculationService.cs  ToastService.cs
UI_ChausseeNeuve/ViewModels/: BibliothequeViewModel.cs  Catalogue1998ViewModel.cs  ChargesViewModel.cs  LcpcSetraViewModel.cs  MaterialItem.cs  MaterialViewModels.cs  NFP98086ViewModel.cs  NoteDeCalculViewModel.cs  RelayCommand.cs  ResultatViewModel.cs  StructureEditorViewModel.cs  ValeursAdmissiblesViewModel.cs
UI_ChausseeNeuve/Views/: BibliothequeView.xaml  BibliothequeView.xaml.cs  CategoryToVisibilityConverter.cs  ChargesView.xaml  ChargesView.xaml.cs  FileMenuView.xaml  FileMenuView.xaml.cs  GridViewVerticalGridLines.cs  HoverNavBar.xaml  HoverNavBar.xaml.cs  MaterialSelectionControl.xaml  MaterialSelectionControl.xaml.cs  NoteDeCalculView.xaml  NoteDeCalculView.xaml.cs  ResultatTemplateSelector.cs  ResultatView.xaml  ResultatView.xaml.cs  RowTemplateSelector.cs  StatutCellBgConverter.cs  StructureDeChausseeView.xaml  StructureDeChausseeView.xaml.cs  (+2 more)
archive/: README.md
docs/: DOCUMENTATION_APPLICATION.md  PAVEMENT_CALCULATION_TECHNICAL_ACHIEVEMENTS.md  PRODUCTION_ALGORITHM_STATUS.md  PYMASTIC_CPP_DEBUG_PLAN.md  README.md
(+61 files in other folders)
